--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack/webpack.dev.conf.js",
     "build": "webpack --config ./webpack/webpack.prod.conf.js",
-    "build:gh": "NODE_ENV=production&webpack --config ./webpack/webpack.ghpages.conf.js"
+    "build:gh": "NODE_ENV=production webpack --config ./webpack/webpack.ghpages.conf.js"
   },
   "keywords": [],
   "author": "",
